--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "vue": "^2.5.11",
-    "vue-router": "^3.5.4"
+    "vue-router": "^3.5.4",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
